force-app/main/default/objects/SBQQ__InstallProcessorLog__c/fields/SBQQ__MethodName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MethodName__c</fullName>
        <description>Name of the method run within the Install Script</description>
        <inlineHelpText>Name of the method run within the Install Script</inlineHelpText>
        <label>Method Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>