force-app/main/default/objects/SBQQ__InstallProcessorLog__c/fields/SBQQ__Time__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Time__c</fullName>
        <description>Timestamp for running the method</description>
        <inlineHelpText>Timestamp for running the method</inlineHelpText>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </CustomField>