force-app/main/default/objects/SBQQ__InstallProcessorLog__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__MethodName__c</columns>
        <columns>SBQQ__Time__c</columns>
        <columns>SBQQ__Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>